Fix incorrect behavior in HTMLCollection.prototype.item(). https://bugs.webkit.org/show_bug.cgi?id=74468

Patch by Pablo Flouret <pablof@motorola.com> on 2012-01-25
Reviewed by Adam Barth.

HTMLCollection.prototype.item("someString") was falling back to
.namedItem("someString"), which is wrong per spec. Also align the
handling of various other types of objects passed as the argument with
the spec and the rest of the browsers.

Source/WebCore:

Test: fast/dom/collection-item.html

* bindings/js/JSHTMLCollectionCustom.cpp: Remove custom implementation of item().
* bindings/v8/custom/V8HTMLCollectionCustom.cpp: Ditto.
* html/HTMLCollection.idl: Remove [Custom] in item(), it's not needed.

LayoutTests:

* fast/dom/collection-item-expected.txt: Added.
* fast/dom/collection-item.html: Added.

Canonical link: https://commits.webkit.org/93873@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105870 268f45cc-cd09-0410-ab3c-d52691b4dbfc